# PyConChina2022

./: .gitignore  PyConChina 2022.lektorproject  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: build.yaml
assets/static/: custom.css
content/: contents.lr
content/about/: contents.lr
content/beijing/: contents.lr
content/beijing/cocotb/: contents.lr
content/beijing/dl-security/: contents.lr
content/beijing/finetune-service/: contents.lr
content/beijing/ml-in-container/: contents.lr
content/beijing/python-ai-azurenemo/: contents.lr
content/beijing/python-kubernetes/: contents.lr
content/beijing/python-launch-acceleration/: contents.lr
content/cfp/: contents.lr
content/hangzhou/: contents.lr
content/hangzhou/adlik/: contents.lr
content/hangzhou/ai-tools/: contents.lr
content/hangzhou/arm-python-ai/: contents.lr
content/hangzhou/github-python/: contents.lr
content/hangzhou/pants/: contents.lr
content/hangzhou/streamlit/: contents.lr
content/partners/: contents.lr
content/shanghai/: contents.lr
content/shanghai/aigc/: contents.lr
content/shanghai/big-data-relation/: contents.lr
content/shanghai/dl-framework/: contents.lr
content/shanghai/graph-neuro-network/: contents.lr
content/shanghai/ml-in-container/: contents.lr
content/shanghai/python-profiling/: contents.lr
content/shenzhen/: contents.lr
content/volunteer/: contents.lr
databags/: nav.json
models/: city.ini  talk.ini
templates/: 404.html  city.html  home.html  layout.html  page.html  talk.html
templates/components/: footer.html  nav.html
(+10 files in other folders)
