[project]
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "Lektor @ git+https://github.com/frostming/lektor.git@feature/livereload",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.scripts]
serve = "lektor server"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
