[project]
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "lektor>=3.4.0b3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.scripts]
serve = "lektor server"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
