[project]
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "lektor>=3.4.0b3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.scripts]
serve = "lektor server"
# Don't know why but need to build twice so that tailwindcss can compile rightly.
build_static = {composite = ["lektor build", "lektor build"]}
